Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_fabric-data-agent-webapp.yml
+++ b/.github/workflows/main_fabric-data-agent-webapp.yml
@@ -50,27 +50,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D797BF30279A41EC9A67A7E804200A12 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3F3D466D1D76410EB284E05D4F6988AE }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5AC286D3D8BC4F7BBBD86EA68904F777 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'Fabric-data-agent-webapp'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F860071AEBBC4346A6BC5F3BEB89A0BE }}
